@startuml
title -DIAGRAMA DE CLASES UNIFICADO SADAT-

class Usuario {
  -id: Integer
  -username: String
  -email: String
  -password: String
  -tipo: TipoUsuario
  -telefono: String
  -direccion: Text
  -fecha_registro: DateTime
  +registrar()
  +autenticar()
  +actualizarPerfil()
  +gestionarPedidos()
  +gestionarCarrito()
  +solicitarServicios()
}

class SuperAdministrador {
  -id: Integer
  -username: String
  -email: String
  -password: String
  -tipo: TipoUsuario
  -fecha_registro: DateTime
  +gestionarUsuarios()
  +gestionarEmpresas()
  +gestionarConfiguracion()
  +generarReportes()
  +gestionarNotificaciones()
}

class ConfiguracionSistema {
  -id: Integer
  -nombre_sistema: String
  -descripcion: Text
  -logo: String
  -email_contacto: String
  -telefono_contacto: String
  -direccion: Text
  -terminos_condiciones: Text
  -politica_privacidad: Text
  +actualizarConfiguracion()
}

class MicroempresaIntegral {
  -id: Integer
  -nombre_empresa: String
  -descripcion: Text
  -rut_empresa: String
  -imagen: String
  -estado: EstadoEmpresa
  +gestionarCatalogo()
  +gestionarPedidos()
  +gestionarProductos()
  +gestionarMateriasPrimas()
  +gestionarMaquinaria()
  +gestionarInventario()
  +generarReportes()
}

class MicroempresaSatelite {
  -id: Integer
  -nombre_empresa: String
  -descripcion: Text
  -rut_empresa: String
  -imagen: String
  -direccion: Text
  -estado: EstadoEmpresa
  +gestionarServicios()
  +gestionarSolicitudes()
  +gestionarMaquinaria()
  +gestionarMateriasPrimas()
  +generarReportes()
}

class CategoriaProducto {
  -id: Integer
  -nombre: String
  -descripcion: Text
}

class ProductoTerminado {
  -id: Integer
  -nombre: String
  -descripcion: Text
  -precio: Decimal
  -stock: Integer
  -imagen: String
  -categoria: CategoriaProducto
  +actualizarStock()
  +actualizarPrecio()
  +verificarDisponibilidad()
}

class Servicio {
  -id: Integer
  -nombre: String
  -descripcion: Text
  -precio_minimo: Decimal
  -precio_maximo: Decimal
  -fecha_creacion: DateTime
  +actualizarPrecios()
  +actualizarDisponibilidad()
  +cotizar()
}

class MateriaPrima {
  -id: Integer
  -nombre: String
  -descripcion: Text
  -cantidad: Decimal
  -unidad_medida: String
  -precio_unitario: Decimal
  -proveedor: String
  +actualizarStock()
  +actualizarPrecio()
  +verificarDisponibilidad()
  +verificarNivelMinimo()
  +generarAlerta()
}

class Maquinaria {
  -id: Integer
  -nombre: String
  -descripcion: Text
  -cantidad: Integer
  -imagen: String
  -estado: EstadoMaquina
  -fecha_adquisicion: Date
  -ultima_mantencion: Date
  +registrarMantenimiento()
  +actualizarEstado()
  +verificarDisponibilidad()
}

class Carrito {
  -id: Integer
  -fecha_creacion: DateTime
  -fecha_actualizacion: DateTime
  +agregarItem()
  +eliminarItem()
  +calcularTotal()
}

class ItemCarrito {
  -id: Integer
  -cantidad: Integer
  -fecha_agregado: DateTime
  +actualizarCantidad()
  +calcularSubtotal()
}

class Pedido {
  -id: Integer
  -cantidad: Integer
  -fecha_pedido: DateTime
  -fecha_entrega: Date
  -estado: EstadoPedido
  -total: Decimal
  +calcularTotal()
  +actualizarEstado()
}

class DetallePedido {
  -id: Integer
  -cantidad: Integer
  -precio_unitario: Decimal
  -subtotal: Decimal
  +calcularSubtotal()
}

class PedidoPersonalizado {
  -id: Integer
  -descripcion: Text
  -cantidad: Integer
  -fecha_solicitud: DateTime
  -estado: EstadoPedido
  -cotizacion: Decimal
  -fecha_entrega_estimada: Date
  -referencia_imagen: String
  +actualizarEstado()
  +registrarCotizacion()
}

class SolicitudConfeccion {
  -id: Integer
  -descripcion: Text
  -cantidad: Integer
  -fecha_solicitud: DateTime
  -estado: EstadoSolicitud
  -material_cliente: Boolean
  -detalles_material: Text
  +actualizarEstado()
  +registrarCotizacion()
  +gestionarMateriales()
}

class Notificacion {
  -id: Integer
  -titulo: String
  -mensaje: Text
  -fecha: DateTime
  -tipo: TipoNotificacion
  -leida: Boolean
  +marcarComoLeida()
  +enviar()
  +enviarNotificacionMasiva()
  +enviarNotificacionEmpresa()
  +enviarNotificacionUsuario()
}

class Transaccion {
  -id: Integer
  -monto: Decimal
  -fecha: DateTime
  -estado: EstadoTransaccion
  -metodo_pago: String
  -descripcion: Text
  +procesarPago()
  +actualizarEstado()
  +generarComprobante()
}

class Reporte {
  -id: Integer
  -titulo: String
  -contenido: Text
  -fecha_generacion: DateTime
  -tipo: TipoReporte
  -fecha_inicio: DateTime
  -fecha_fin: DateTime
  -datos: JSON
  +generarReporte()
  +generarReporteVentas()
  +generarReporteUsuarios()
  +generarReporteEmpresas()
  +generarReporteServicios()
  +generarReporteSolicitudes()
  +generarReporteInventario()
  +exportarPDF()
  +exportarReporte()
}

' Relaciones entre clases
Usuario "1" -- "1" MicroempresaIntegral
Usuario "1" -- "1" MicroempresaSatelite
Usuario "1" -- "1" Carrito

SuperAdministrador "1" -- "1" ConfiguracionSistema
SuperAdministrador "1" -- "*" MicroempresaIntegral
SuperAdministrador "1" -- "*" MicroempresaSatelite
SuperAdministrador "1" -- "*" Usuario
SuperAdministrador "1" -- "*" Notificacion
SuperAdministrador "1" -- "*" Reporte

MicroempresaIntegral "1" -- "*" ProductoTerminado
MicroempresaIntegral "1" -- "*" MateriaPrima
MicroempresaIntegral "1" -- "*" Maquinaria
MicroempresaIntegral "1" -- "*" Pedido
MicroempresaIntegral "1" -- "*" PedidoPersonalizado
MicroempresaIntegral "1" -- "*" Reporte
MicroempresaIntegral "1" -- "*" Notificacion

MicroempresaSatelite "1" -- "*" Servicio
MicroempresaSatelite "1" -- "*" SolicitudConfeccion
MicroempresaSatelite "1" -- "*" MateriaPrima
MicroempresaSatelite "1" -- "*" Maquinaria
MicroempresaSatelite "1" -- "*" Reporte
MicroempresaSatelite "1" -- "*" Notificacion

ProductoTerminado "*" -- "1" CategoriaProducto

Carrito "1" -- "*" ItemCarrito
ItemCarrito "*" -- "1" ProductoTerminado

Pedido "1" -- "*" DetallePedido
DetallePedido "*" -- "1" ProductoTerminado

Notificacion "*" -- "*" Pedido
Notificacion "*" -- "*" SolicitudConfeccion

Pedido "1" -- "*" Transaccion
PedidoPersonalizado "1" -- "*" Transaccion
SolicitudConfeccion "1" -- "*" Transaccion

@enduml